feat(core): add CLI tool and improve package structure
Add a new CLI tool with 'init' command to scaffold visual test files,
and restructure the package with proper exports, build configuration,
and module resolution.

- Create bin/cli.ts with init command to copy template files
- Add proper package.json exports and build scripts
- Update import paths to use explicit .js extensions
- Add tsconfig.build.json for compilation configuration
- Move index.ts to project root and update exports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "visual.spec.ts"]
+  "include": ["src", "templates/visual.spec.ts", "index.ts"]
 }
