--- a/package.json
+++ b/package.json
@@ -3,9 +3,44 @@
   "version": "0.0.1",
   "type": "module",
   "description": "Simple visual regression testing inside (or out of) Storybook using Vitest Browser mode, Pixelmatch and Redis/Filesystem storage",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "bin": {
+    "simple-visual-tests": "./bin/cli.js"
+  },
+  "files": [
+    "templates",
+    "dist/**/*",
+    "index.html",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
+    "dev": "vitest",
     "test": "vitest",
-    "test:visual": "vitest --config=./vitest.browser.config.ts"
+    "test:visual": "vitest --config=./vitest.browser.config.ts",
+    "build": "npm run build:clean && npm run build:ts && npm run copyfiles",
+    "build:clean": "rimraf dist && mkdir dist",
+    "build:ts": "tsc -p tsconfig.build.json",
+    "copyfiles": "copyfiles ./index.html ./dist",
+    "prepublishOnly": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/simple-visual-tests.git"
   },
   "keywords": [
     "visual",
@@ -25,19 +60,27 @@
   ],
   "author": "Mickaël Dk",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/your-username/simple-visual-tests/issues"
+  },
+  "homepage": "https://github.com/your-username/simple-visual-tests#readme",
   "dependencies": {
-    "@testcontainers/redis": "^11.7.2",
-    "@types/node": "^24.9.2",
-    "@types/pngjs": "^6.0.5",
-    "@vitest/browser": "^3.2.4",
     "pixelmatch": "^7.1.0",
-    "playwright": "^1.56.1",
     "pngjs": "^7.0.0",
     "redis": "^5.9.0",
+    "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@testcontainers/redis": "^11.8.0",
+    "@types/node": "^24.10.0",
+    "@types/pngjs": "^6.0.5",
+    "@vitest/browser": "^3.2.4",
+    "native-copyfiles": "^1.3.6",
+    "playwright": "^1.56.1",
+    "rimraf": "^6.1.0",
     "storybook": "^9.1.16",
     "typescript": "^5.9.3",
-    "uuid": "^13.0.0",
-    "vite": "^7.1.12",
+    "vite": "^7.2.2",
     "vitest": "^3.2.4"
   }
 }
