chore(package): update files list in package.json
Add src, index.ts, and bin directories to the files array

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "files": [
     "templates",
     "dist/**/*",
+    "src",
+    "index.ts",
+    "bin",
     "index.html",
     "README.md",
     "LICENSE"
