build(config): update build configuration for distribution
Update package.json to point bin entry to ./dist/bin/cli.js and modify
the copyfiles script to include templates/visual.spec.ts in the build.
Also update tsconfig.build.json to exclude templates from compilation.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     }
   },
   "bin": {
-    "simple-visual-tests": "./bin/cli.js"
+    "simple-visual-tests": "./dist/bin/cli.js"
   },
   "files": [
     "templates",
@@ -38,7 +38,7 @@
     "build": "npm run build:clean && npm run build:ts && npm run copyfiles",
     "build:clean": "rimraf dist && mkdir dist",
     "build:ts": "tsc -p tsconfig.build.json",
-    "copyfiles": "copyfiles ./index.html ./dist",
+    "copyfiles": "copyfiles ./index.html ./dist && copyfiles ./templates/visual.spec.ts ./dist",
     "prepublishOnly": "npm run build"
   },
   "repository": {
