refactor(build): split entry points for browser and server compatibility
- Create separate browser.ts entry point with browser-compatible exports
- Create separate server.ts entry point with Node.js-specific features
- Remove old index.ts entry point
- Update package.json exports to provide distinct browser and server modules
- Update templates/visual.spec.ts to import from browser entry point
- Adjust tsconfig files to include new entry points and exclude Node.js types in browser context

BREAKING CHANGE: Main entry point changed from 'simple-visual-tests' to
'simple-visual-tests/browser' for browser contexts and
'simple-visual-tests/server' for server contexts.

--- a/package.json
+++ b/package.json
@@ -7,14 +7,24 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
+    "./browser": {
       "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+        "types": "./dist/browser.d.ts",
+        "default": "./dist/browser.js"
       },
       "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.cjs"
+        "types": "./dist/browser.d.ts",
+        "default": "./dist/browser.cjs"
+      }
+    },
+    "./server": {
+      "import": {
+        "types": "./dist/server.d.ts",
+        "default": "./dist/server.js"
+      },
+      "require": {
+        "types": "./dist/server.d.ts",
+        "default": "./dist/server.cjs"
       }
     }
   },
