--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "templates/visual.spec.ts", "index.ts"]
+  "include": ["src", "templates/visual.spec.ts", "browser.ts"]
 }
