--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,6 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["vite/client", "@vitest/browser/providers/playwright"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -22,5 +21,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "vitest.browser.config.ts"]
+  "include": ["src"]
 }
