refactor(config): restructure TypeScript configuration and browser command types
- Replace project references with direct tsconfig.json configuration
- Remove tsconfig.app.json and tsconfig.node.json in favor of unified config
- Add comprehensive JSDoc documentation for browser command types in browser.ts
- Move visual test template to templates/visual.spec.ts
- Simplify vitest.browser.config.ts by removing project-based setup
- Update build configuration to include templates/helpers and exclude template test file

BREAKING CHANGE: TypeScript configuration has been restructured, removing project references.

--- a/package.json
+++ b/package.json
@@ -3,29 +3,18 @@
   "version": "0.0.1",
   "type": "module",
   "description": "Simple visual regression testing inside (or out of) Storybook using Vitest Browser mode, Pixelmatch and Redis/Filesystem storage",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     "./browser": {
-      "import": {
-        "types": "./dist/browser.d.ts",
-        "default": "./dist/browser.js"
-      },
-      "require": {
-        "types": "./dist/browser.d.ts",
-        "default": "./dist/browser.cjs"
-      }
+      "types": "./dist/browser.d.ts",
+      "default": "./dist/browser.js"
     },
     "./server": {
-      "import": {
-        "types": "./dist/server.d.ts",
-        "default": "./dist/server.js"
-      },
-      "require": {
-        "types": "./dist/server.d.ts",
-        "default": "./dist/server.cjs"
-      }
+      "types": "./dist/server.d.ts",
+      "default": "./dist/server.js"
+    },
+    "./helpers": {
+      "types": "./dist/templates/helpers/index.d.ts",
+      "default": "./dist/templates/helpers/index.js"
     }
   },
   "bin": {
