refactor(typescript): update ts-ignore to ts-expect-error and add compiler options
- Replace @ts-ignore with @ts-expect-error in browser.ts, server.ts, compareSnapshots.ts and getBaseline.ts
- Add noUnusedParameters, noUnusedLocals, erasableSyntaxOnly and noUncheckedSideEffectImports to tsconfig.build.json

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -30,7 +30,11 @@
     "composite": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.build.tsbuildinfo",
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "erasableSyntaxOnly": true,
+    "noUncheckedSideEffectImports": true
   },
   "include": [
     "browser.ts",
