--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_STORYBOOK_URL=http://localhost:6006
-VITE_UPDATE_VISUAL_SNAPSHOTS=false
-# VITE_VISUAL_TEST_IMAGES_PATH=./visual-test-images
+#VITE_STORYBOOK_URL=http://localhost:6006
+#VITE_UPDATE_VISUAL_SNAPSHOTS=false
+#VITE_VISUAL_TEST_IMAGES_PATH=./tests/visual-test-images
