--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -43,10 +43,5 @@
     "bin/**/*",
     "templates/helpers"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/tests/**/*",
-    "templates/visual.spec.ts"
-  ]
+  "exclude": ["node_modules", "dist", "**/tests/**/*", "**/**/*.spec.ts"]
 }
