feat(config): add environment-based story and viewport filtering
This commit introduces the ability to filter stories and viewports for visual testing through environment variables, enhancing test flexibility and efficiency.

- Add VITE_STORY_IDS environment variable to specify colon-separated list of storyIds to test
- Add VITE_TESTED_VIEWPORTS environment variable to specify colon-separated list of viewport tuples (name,width,height)
- Create getViewportConfig helper to parse viewport configurations from environment variables or Storybook
- Create loadStories helper with filtering capabilities and proper validation
- Add sendViewports.html to extract viewport configurations from Storybook
- Update documentation to reflect new environment variables and configuration options
- Add comprehensive unit tests for both helper functions
- Include jsdom dependency for testing environment

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -39,6 +39,7 @@
   "include": [
     "browser.ts",
     "server.ts",
+    "storybook.ts",
     "src/**/*",
     "bin/**/*",
     "templates/helpers"
