--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
       "types": "./dist/server.d.ts",
       "default": "./dist/server.js"
     },
+    "./storybook": {
+      "types": "./dist/storybook.d.ts",
+      "default": "./dist/storybook.js"
+    },
     "./helpers": {
       "types": "./dist/templates/helpers/index.d.ts",
       "default": "./dist/templates/helpers/index.js"
@@ -24,9 +28,7 @@
     "templates",
     "dist/**/*",
     "src",
-    "index.ts",
     "bin",
-    "index.html",
     "README.md",
     "LICENSE"
   ],
@@ -37,7 +39,7 @@
     "build": "npm run build:clean && npm run build:ts && npm run copyfiles",
     "build:clean": "rimraf dist && mkdir dist",
     "build:ts": "tsc -p tsconfig.build.json",
-    "copyfiles": "copyfiles testerHtml.html templates/visual.spec.ts templates/vitest.visual.config.ts dist",
+    "copyfiles": "copyfiles testerHtml.html templates/visual.spec.ts templates/helpers/sendViewports.html templates/vitest.visual.config.ts dist",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -77,6 +79,7 @@
     "@types/node": "^24.10.0",
     "@types/pngjs": "^6.0.5",
     "@vitest/browser": "^3.2.4",
+    "jsdom": "^27.1.0",
     "native-copyfiles": "^1.3.6",
     "playwright": "^1.56.1",
     "rimraf": "^6.1.0",
